# demo

shared_static_lib/: CMakeLists.txt  README.md  test.cc
shared_static_lib/include/: shared_lib_cat.h  shared_lib_dog.h  static_lib.h
shared_static_lib/shared_lib_cat/: CMakeLists.txt  shared_lib_cat.cc
shared_static_lib/shared_lib_cat/static_lib/: CMakeLists.txt  static_lib.cc
shared_static_lib/shared_lib_dog/: CMakeLists.txt  shared_lib_dog.cc
shared_static_lib/shared_lib_dog/static_lib/: CMakeLists.txt  static_lib.cc
